Franklin Gothic Medium font

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website-personal",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://joshcheung.github.io/JoshCheung/",
+  "homepage" : "https://www.joshcheung.info",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
