--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "website-personal",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://www.joshcheung.info",
+  "homepage": "https://www.joshcheung.info",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
+    "react-scroll": "^1.7.14",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
