--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^4.0.0",
     "react-scroll": "^1.7.14",
     "reactstrap": "^8.0.0"
   },
