--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^0.32.4",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
+    "react-photo-gallery": "^8.0.0",
     "react-scripts": "^4.0.0",
     "react-scroll": "^1.7.14",
     "reactstrap": "^8.0.0"
