--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website-personal",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.joshcheung.info",
+  "homepage": "https://www.joshtcheung.com",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
